--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 
 <body>
-    <script src="sketch.js"></script>
     <script src="particle.js"></script>
+    <script src="shrimp.js"></script>
+    <script src="nemo.js"></script>
+    <script src="anemone.js"></script>
+
+    <script src="sketch.js"></script>
 </body>
 
 </html>
