nemo hide, barracuda set up

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="shrimp.js"></script>
     <script src="nemo.js"></script>
     <script src="anemone.js"></script>
+    <script src="barracuda.js"></script>
+
 
     <script src="sketch.js"></script>
 </body>
