--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="nemo.js"></script>
     <script src="anemone.js"></script>
     <script src="barracuda.js"></script>
+    <script src="seaweed.js"></script>
+
 
 
     <script src="sketch.js"></script>
