--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="barracuda.js"></script>
     <script src="seaweed.js"></script>
 
+    <script src="jelly.js"></script>
 
 
     <script src="sketch.js"></script>
